<resources>
    <string name="app_name">Volunteer Helper</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="map">Volunteer Map</string>
    <string name="help">First Help</string>
    <string name="switz">Switzerland</string>
    <string name="brazil">Brazil</string>
    <string name="urug">Uruguay</string>
    <string name="arab">Saudi Arabia</string>
    <string name="korea">South Korea</string>
    <string name="mexico">Mexico</string>

    <string name="iceland">Iceland</string>
    <string name="croat">Croatia</string>
    <string name="arena">Rostov Arena</string>
    <string name="june17">17 June 21:00</string>
    <string name="june20">20 June 18:00</string>
    <string name="june23">23 June 21:00</string>
    <string name="june26">26 June 18:00</string>
    <string name="july2">2 July 21:00</string>
    <string name="winnerG">Winner of group G</string>
    <string name="winnerH">Winner of group H</string>
    <string name="inf">Information</string>
    <string name="group">Group</string>
    <string name="Dictionary">Dictionary</string>
    <string name="joinGroup">Join Group</string>
    <string name="groupId">GroupId</string>
    <string name="name">Your name</string>
    <string name="group_name">Group Name?</string>
    <string name="group_desct">Descriprion?</string>
    <string name="leader">Leader</string>
    <string name="volunteer">Volunteer</string>
    <string name="crtGroup">Create Group</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="reset">Reset</string>
    <string name="eat">I ate</string>
    <string name="pass">Please log in</string>
    <string name="come">I came</string>
    <string name="no_one">There is no one in your group</string>
    <string name="name_gr">Name:</string>
    <string name="status">Choose status</string>
    <string name="all">ALL</string>
    <string name="reset_calendar">Change your calendar?</string>
    <string name="my_schd">My Schedule</string>
    <string name="map_short">Map</string>
    <string name="extra">Extra Numbers</string>
    <string name="leader_confirm_button">Confirm</string>
    <string name="trans">Translate</string>
    <string name="settings">About</string>
    <string name="confirm">Confirm</string>
    <string name="leader_come">Become Leader</string>
    <string name="volonteer_come">Become volonteer</string>
    <string name="leader_login">Leader Login</string>
    <string name="leader_password">Leader Password</string>
    <string name="leader_confirm">Are YOU really leader?</string>
    <string name="leader_confirm_toolbar">Leader Confirm</string>
    <string name="my_groups">My Groups</string>
    <string name="name_fam">Your 2nd Name</string>
    <string name="description">Description</string>
    <string name="change_status">Do you want to become a Volonteer Leader?</string>
    <string name="show_group">Show other group  -></string>
    <string name="soon_work">It is your work time soon</string>
    <string name="eaten">Have you eaten?</string>
    <string name="all_grp">All Groups</string>
    <string name="groups_not_exist">There isn't any groups yet</string>
    <string name="code">Code</string>
    <string name="no_groups">You don`t have any groups</string>
    <string name="time">Time</string>
    <string name="yourmessage">Your message here</string>
    <string name="your_days">Your Days</string>
    <string name="your_time">Your Time:</string>
    <string name="yes">Yes</string>
    <string name="app">Volunteer Helper</string>

    <string name="my_notification_title_template">My: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="my_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit
        amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_login">LoginActivity</string>


</resources>
