<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".groups.ChooseToDo"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_gravity="top"
        app:title="@string/group"
        android:elevation="8dp"
        android:background="@color/colorWhite_front"
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />



<LinearLayout
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <Button
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="@drawable/rect_back"
        android:textColor="@color/colorBlue_text"
        android:textSize="20sp"
        android:id="@+id/chooseTo_createGroup"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/my_groups" />

        <Button
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="@drawable/rect_back"
        android:textColor="@color/colorBlue_text"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/choose_to_jointogroup"
        android:text="@string/joinGroup"/>
</LinearLayout>




</android.support.constraint.ConstraintLayout>