
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.koolguy.scroll.HandBook2"
    android:orientation="vertical">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/teamlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.koolguy.scroll.TeamList2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="350dp"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:background="@drawable/rect_back"
                android:elevation="4dp">

                <LinearLayout
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/switz"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/switzerland" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/switz"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/braz"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/brazil" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/brazil"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:paddingRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="end"
                        android:text="@string/june17"
                        android:textColor="#000000"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="bottom"
                        android:text="@string/arena"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect_back"
                android:elevation="4dp">

                <LinearLayout
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/urug"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/uruguay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/urug"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/arab"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/saudi_arabia" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arab"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:paddingRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/june20"
                        android:textColor="#000000"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="@string/arena"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect_back"
                android:elevation="4dp">

                <LinearLayout
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/korea"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/south_korea" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/korea"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/mexico"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/mexico" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mexico"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:paddingRight="3dp"
                    android:layout_width="370dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/june23"
                        android:textColor="#000000"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="@string/arena"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect_back"
                android:elevation="4dp">

                <LinearLayout
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/iceland" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/iceland"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/croatia" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/croat"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:paddingRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/june26"
                        android:textColor="#000000"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="@string/arena"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect_back"
                android:elevation="4dp">

                <LinearLayout
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/grG"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/question" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/winnerG"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/grH"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:background="@drawable/question" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winnerH"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:paddingRight="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/july2"
                        android:textColor="#000000"
                        android:textSize="37sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="@string/arena"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </FrameLayout>

        </LinearLayout>


    </HorizontalScrollView>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/schdBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:text="@string/all"
        android:textColor="@color/colorBlue_text"
        android:background="@drawable/button">
    </Button>

    <ListView
        android:layout_margin="6dp"
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:elevation="4dp"
        android:background="@drawable/rect_back">
    </ListView>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/helpBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:text="@string/all"
        android:textColor="@color/colorBlue_text"
        android:background="@drawable/button">
    </Button>

    <Button
        android:textSize="20sp"
        android:id="@+id/mapBtn"
        android:text="@string/map"
        android:textColor="@color/colorBlue_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:layout_margin="5dp">
    </Button>
</LinearLayout>
</ScrollView>
