<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Calendar_Show_Fragment"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        app:title="@string/inf"
        android:elevation="8dp"
        android:background="@color/colorWhite_front"
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageButton
            android:id="@+id/settings"
            android:layout_gravity="end"
            android:background="@drawable/settings"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:textSize="20sp"
        android:id="@+id/textView4"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/your_days" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:background="@drawable/rect_back"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:id="@+id/calendarShow"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4">

    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

    <TextView
        android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_width="169dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="12dp"
        android:text="@string/your_time"
        android:textSize="20sp"/>


    <TextView
        android:textSize="20sp"
        android:id="@+id/time_show"
        android:layout_width="168dp"
        android:layout_height="57dp"
        android:text="TextView"
        android:textColor="#000000" />

</LinearLayout>